--- a/scratch pages/scratch_styles.css
+++ b/scratch pages/scratch_styles.css
@@ -1,4 +1,4 @@
-.listSection{
+.classList{
   font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   font-weight: bold;
   font-style: oblique;
