--- a/scratch pages/scratch_styles.css
+++ b/scratch pages/scratch_styles.css
@@ -16,7 +16,7 @@ body{
   display: block;
 }
 .classHeader{
-  background-color:#f79090 ;
+  background-color:white ;
   padding: 5px;
   text-align: center;
   margin-top: 40px;
